[project]
name = "qtm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "sisl>=0.16.2",
]
